Create a user call list api and revert code in userlist api
